# smartup-robot

./: .gitignore  README.md  micropython_testing.py
controller/: example.py  example_2.py  gamepad.py  install.sh  ps4.py  robot.py
pico/: CMakeLists.txt  Makefile  README.md  buffer.py  command.hpp  dhcpserver.c  encoder.hpp  encoder.pio  error.hpp  export_wifi_info.sh  hello_usb.c  jsnm.h  led.hpp  led_pwm.pio  lwipopts.h  main.c  main.cpp  motor.hpp  networking.cpp  networking.hpp  parser.hpp  pins.h  rp2040_clock.py  servos.hpp  telemetry.hpp  v_bat.hpp  wifi_pass.h
pico/dhcpserver/: dhcpserver.c  dhcpserver.h
